Include robotpy_build include directory in sdist/wheel

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,2 +1,3 @@
 recursive-include robotpy_build/pybind11/include *.h
 recursive-include robotpy_build/templates *.j2
+recursive-include robotpy_build/include *.h
