Tell github actions to checkout submodules

--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -8,7 +8,14 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+    - name: Checkout submodules
+      shell: bash
+      run: |
+        auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+        git submodule sync --recursive
+        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+      
     - uses: actions/setup-python@v1
       with:
         python-version: 3.8
@@ -23,11 +30,19 @@ jobs:
     if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags')
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+    - name: Checkout submodules
+      shell: bash
+      run: |
+        auth_header="$(git config --local --get http.https://github.com/.extraheader)"
+        git submodule sync --recursive
+        git -c "http.extraheader=$auth_header" -c protocol.version=2 submodule update --init --force --recursive --depth=1
+    
     - uses: actions/setup-python@v1
       with:
         python-version: 3.8
     - run: pip install wheel
+
     - name: Build packages
       run: python setup.py sdist bdist_wheel
     - name: Publish to PyPI
