--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ install_requires =
     toposort
     pyyaml >= 5.1
     dataclasses; python_version < '3.7'
+    delocate; platform_system == 'Darwin'
 setup_requires =
     setuptools_scm
 python_requires = >=3.6
