Set long description type

--- a/setup.cfg
+++ b/setup.cfg
@@ -2,6 +2,7 @@
 name = robotpy-build
 description = Build tool for RobotPy projects
 long_description = file: README.md
+long_description_content_type = text/markdown
 author = Dustin Spicuzza
 author_email = robotpy@googlegroups.com
 url = https://github.com/robotpy/robotpy-build
